[package]
name = "giga"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Akinyemi <steve@gigamono.com>"]
description = "The go-to CLI tool for managing Gigamono apps, extensions and apis"
readme = "README.md"
repository = "https://github.com/gigamono/giga"
keywords = ["no-code", "gigamono", "giga", "serverless", "toolchain"]
categories = ["development-tools", "command-line-utilities"]
documentation = "https://github.com/gigamono/giga"
homepage = "https://gigamono.com"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }

[[bin]]
name = "giga"
path = "bin/cli.rs"
